# pymatchit

./: .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  demo.py  demo_lalonde.py  example_workflow.ipynb  pyproject.toml  validation.ipynb
.github/workflows/: test.yml
paper/: paper.bib  paper.md
src/pymatchit/: __init__.py  core.py  diagnostics.py  distance.py  matchers.py  plotting.py
tests/: test_core.py
