[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymatchit"
version = "0.1.0"
description = "A Python port of the R MatchIt package for causal inference"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Jonas Tünnermann", email = "jonas.tuennermann@freenet.de"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "statsmodels>=0.13",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",  # For linting
    "jupyter", # For running examples
]

[project.urls]
"Homepage" = "https://github.com/jtuenner/pymatchit"
"Bug Tracker" = "https://github.com/jtuenner/pymatchit/issues"